fix(list-task.component): Solve error on scroll on Safari browser

--- a/src/app/ui/dashboard/components/list-tasks/list-tasks.component.scss
+++ b/src/app/ui/dashboard/components/list-tasks/list-tasks.component.scss
@@ -72,18 +72,15 @@
     }
 
     mat-card-content {
-      height: 100%;
+      height: calc(100% - 80px);
       @media screen and (max-width: 600px) {
         height: calc(100% - 48px);
       }
 
       .sub-container {
         overflow: auto;
-        height: calc(100% - 72px);
+        height: 100%;
         width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         position: relative;
 
         .notFoundTasks {
@@ -102,6 +99,7 @@
           mat-card-content {
             display: flex;
             width: 100%;
+            height: 100%;
             position: relative;
             padding: 12px;
           }
@@ -129,6 +127,7 @@
           .content {
             width: 90%;
             height: 100%;
+            padding: 16px 0;
 
             .head {
               color: #000000;
